[package]
name = "lico"
version = "0.0.1"
authors = ["cht"]
edition = "2018"

[dependencies]

[[bin]]
name = "max_water"
path = "bin/max_water.rs"

[[bin]]
name = "maxnum_fenzhi"
path = "bin/maxnum_fenzhi.rs"

[[bin]]
name = "maxnum_tanxin"
path = "bin/maxnum_tanxin.rs"

[[bin]]
name = "list"
path = "bin/list.rs"

[[bin]]
name = "luoma"
path = "bin/luoma.rs"

[[bin]]
name = "same"
path = "bin/same.rs"

[[bin]]
name = "three"
path = "bin/three.rs"

[[bin]]
name = "three2"
path = "bin/three2.rs"

[[bin]]
name = "numberzuhe"
path = "bin/numberzuhe.rs"

[[bin]]
name = "numberzuhe2"
path = "bin/numberzuhe2.rs"

[[bin]]
name = "lists"
path = "bin/lists.rs"

[[bin]]
name = "kuohao"
path = "bin/kuohao.rs"
