[package]
name = "lico"
version = "0.0.1"
authors = ["cht"]
edition = "2018"

[dependencies]

[[bin]]
name = "max_water"
path = "bin/max_water.rs"

[[bin]]
name = "maxnum_fenzhi"
path = "bin/maxnum_fenzhi.rs"

[[bin]]
name = "maxnum_tanxin"
path = "bin/maxnum_tanxin.rs"

[[bin]]
name = "list"
path = "bin/list.rs"

[[bin]]
name = "luoma"
path = "bin/luoma.rs"

[[bin]]
name = "same"
path = "bin/same.rs"

[[bin]]
name = "three"
path = "bin/three.rs"

[[bin]]
name = "three2"
path = "bin/three2.rs"

[[bin]]
name = "numberzuhe"
path = "bin/numberzuhe.rs"

[[bin]]
name = "numberzuhe2"
path = "bin/numberzuhe2.rs"

[[bin]]
name = "lists"
path = "bin/lists.rs"

[[bin]]
name = "kuohao"
path = "bin/kuohao.rs"

[[bin]]
name = "guangdu"
path = "bin/guangdu.rs"

[[bin]]
name = "word"
path = "bin/word.rs"

[[bin]]
name = "word2"
path = "bin/word2.rs"

[[bin]]
name = "list3"
path = "bin/list3.rs"

[[bin]]
name = "str"
path = "bin/str.rs"

[[bin]]
name = "max_list"
path = "bin/max_list.rs"

[[bin]]
name = "partition"
path = "bin/partition.rs"

[[bin]]
name = "arround"
path = "bin/arround.rs"

[[bin]]
name = "arround2"
path = "bin/arround2.rs"

[[bin]]
name = "root_leaf"
path = "bin/root_leaf.rs"

[[bin]]
name = "road"
path = "bin/road.rs"

[[bin]]
name = "candy"
path = "bin/candy.rs"

[[bin]]
name = "wei"
path = "bin/wei.rs"

[[bin]]
name = "word_break"
path = "bin/word_break.rs"
